--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -18,8 +18,20 @@
         <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
       </li>
         {% if request.user.is_authenticated %}
-        <li class="nav-item {% if request.path == logout_url%}active{% endif %}">
-        <a class="nav-link" href="{{ logout_url }}">Logout</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Admin
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'products:import_lists' %}">Importar Listas</a>
+                  <a class="dropdown-item" href="#">Something</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </li>
+
+            <li class="nav-item {% if request.path == logout_url%}active{% endif %}">
+            <a class="nav-link" href="{{ logout_url }}">Logout</a>
       </li>
         {% else %}
         <li class="nav-item {% if request.path == login_url%}active{% endif %}">
