--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,19 +1,11 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no">
-        <title>Base Template</title>
-        {% include 'base/css.html' %}
-        {% block base_head %}{% endblock %}
-    </head>
-    <body>
-    {% include 'base/navbar.html' with brand_name='Sarmiento Librerias' %}
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
-    {% include 'base/js.html' %}
-    </body>
-</html>
+{% block content %}
+<title>Sarmiento Librerias</title>
+{% block base_head %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}"/>
+{% endblock base_head %}
+<div class="text-center">
+    <h1> Home page</h1>
+</div>
+{% endblock %}
