--- a/products/templates/products/import_lists.html
+++ b/products/templates/products/import_lists.html
@@ -17,6 +17,16 @@
 
         </div>
     </div>
+    <div class="row">
+        <div class="col-12">
+            <p></p>
+            <p></p>
+            <div class="progress">
+                <div class="progress-bar progress-bar-stripped bg-success" role="progressbar" style="width: 10%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                </div>
+            </div>
+        </div>
+    </div>
 
     </div>
 {% endblock %}
