--- a/products/templates/products/import_lists.html
+++ b/products/templates/products/import_lists.html
@@ -21,10 +21,7 @@
         <div class="col-12">
             <p></p>
             <p></p>
-            <div class="progress">
-                <div class="progress-bar progress-bar-stripped bg-success" role="progressbar" style="width: 10%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                </div>
-            </div>
+            {% include  'products/snippets/display_progress.html' %}
         </div>
     </div>
 
