CHG: delete existing file and replace

--- a/products/templates/products/import_lists.html
+++ b/products/templates/products/import_lists.html
@@ -21,7 +21,8 @@
         <div class="col-12">
             <p></p>
             <p></p>
-            {% include  'products/snippets/display_progress.html' %}
+            {% block progressbar %}{% endblock %}
+{#            {% include  'products/snippets/display_progress.html' %}#}
         </div>
     </div>
 
