--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,5 +1,8 @@
 {% url 'home' as home_url%}
 {% url 'login' as login_url%}
+{% url 'products:products_home' as products_url %}
+{% url 'products:import_lists'  as products_import_url %}
+
 {% url 'logout' as logout_url%}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
   <div class="container">
@@ -15,18 +18,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == home_url%}active{% endif %}">
-        <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ home_url }}">Home<span class="sr-only">(current)</span></a>
       </li>
         {% if request.user.is_authenticated %}
-
+        <li class="nav-item {% if request.path == products_url%}active{% endif %}">
+                <a class="nav-link" href="{{ products_url }}">Productos<span class="sr-only">(current)</span></a>
+              </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="{% url 'products:import_lists' %}">Importar Listas</a>
-                  <a class="dropdown-item" href="#">Something</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="{{ products_import_url }}">Importar Listas</a>
                 </div>
             </li>
 
