--- a/products/templates/products/products_home.html
+++ b/products/templates/products/products_home.html
@@ -1,51 +1,29 @@
-{% extends 'base.html' %}
+{% extends 'products/products_base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
-    <div class="row text-center">
+    <h1>Products</h1>
+    <div class="container">
+    <div class="row">
         <div class="col-12">
-            <h1>Productos</h1>
-        </div>
-    </div>
-    <div class="row text-center">
-        <div class="col-2">
-
-        </div>
-        <div class="col-8">
-            <table class="table table-dark">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
+            <table id="table_id" class="display">
+                <thead>
+                    <tr>
+                        <th>Column 1</th>
+                        <th>Column 2</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Row 1 Data 1</td>
+                        <td>Row 1 Data 2</td>
+                    </tr>
+                    <tr>
+                        <td>Row 2 Data 1</td>
+                        <td>Row 2 Data 2</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
-        <div class="col-2">
-
-        </div>
     </div>
-</div>
+    </div>
 {% endblock %}
