--- a/products/templates/products/products_home.html
+++ b/products/templates/products/products_home.html
@@ -1,6 +1,14 @@
 {% extends 'products/products_base.html' %}
 {% load static %}
 {% block content %}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+<script>
+    $(document).ready( function () {
+        $('#table_id').DataTable();
+    });
+</script>
     <h1>Products</h1>
     <div class="container">
     <div class="row">
@@ -18,7 +26,7 @@
                         <td>Row 1 Data 2</td>
                     </tr>
                     <tr>
-                        <td>Row 2 Data 1</td>
+                        <td>Cap 2 Data 1</td>
                         <td>Row 2 Data 2</td>
                     </tr>
                 </tbody>
