--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no">
         <title>Base Template</title>
         {% include 'base/css.html' %}
+        {% include 'base/js.html' %}
         {% block base_head %}{% endblock %}
     </head>
     <body>
@@ -14,6 +15,6 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
-    {% include 'base/js.html' %}
+{#    {% include 'base/js.html' %}#}
     </body>
 </html>
