--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -21,15 +21,16 @@
         <a class="nav-link" href="{{ home_url }}">Home<span class="sr-only">(current)</span></a>
       </li>
         {% if request.user.is_authenticated %}
-        <li class="nav-item {% if request.path == products_url%}active{% endif %}">
-                <a class="nav-link" href="{{ products_url }}">Productos<span class="sr-only">(current)</span></a>
-              </li>
+{#        <li class="nav-item {% if request.path == products_url%}active{% endif %}">#}
+{#                <a class="nav-link" href="{{ products_url }}">Productos<span class="sr-only">(current)</span></a>#}
+{#              </li>#}
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Admin
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <a class="dropdown-item" href="{{ products_import_url }}">Importar Listas</a>
+                  <a class="dropdown-item" href="{{ products_url }}">Consulta Precios</a>
                 </div>
             </li>
 
