--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,9 @@
     <html lang="en">
     <head>
         <!-- Required meta tags -->
-{#        <meta charset="utf-8">#}
-{#        <meta name="viewport" content="width=device-width initial-scale=1, shrink-to-fit=no">#}
-{#        <title>Base Template</title>#}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1">
-        <title>Homepage</title>
+        <title>Sarmiento Librerias</title>
         <link rel="icon" href="favicon.png" type="image/png">
         {% include 'base/css.html' %}
         {% include 'base/js.html' %}
@@ -45,9 +42,8 @@
     </head>
     <body>
     {% include 'base/navbar.html' with brand_name='Sarmiento Librerias' %}
-    <div class="container">
+    <div class="container-fluid">
         {% block content %}{% endblock %}
     </div>
-{#    {% include 'base/js.html' %}#}
     </body>
 </html>
