--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -13,8 +13,8 @@
 				<div class="logo"><a href="javascript:void(0)"><img src="{% static 'img/logob.png' %}" alt=""></a></div>
 				<nav class="nav" id="nav">
 					<ul class="toggle">
-						<li><a href="{% url 'home' %}/#top_content">Home</a></li>
-						<li><a href="#service">Services</a></li>
+						<li><a href="{% url 'home' %}">Inicio</a></li>
+						<li><a href="#service">Servicios</a></li>
 						<li><a href="#work_outer">Work</a></li>
 						<li><a href="#Portfolio">Portfolio</a></li>
 						<li><a href="#client_outer">Clients</a></li>
@@ -37,8 +37,8 @@
                         {% endif %}
 					</ul>
 					<ul class="">
-						<li><a href="#top_content">Home</a></li>
-						<li><a href="#service">Services</a></li>
+						<li><a href="{% url 'home' %}">Inicio</a></li>
+						<li><a href="#service">Servicios</a></li>
 						<li><a href="#work_outer">Work</a></li>
 						<li><a href="#Portfolio">Portfolio</a></li>
 						<li><a href="#client_outer">Clients</a></li>
@@ -64,45 +64,3 @@
 				<a class="res-nav_click animated wobble wow" href="javascript:void(0)"><i class="fa-bars"></i></a> </div>
 		</div>
 	</header>
-	<!--Header_section-->
-{#<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">#}
-{#  <div class="container">#}
-{#  <a class="navbar-brand" href="{{ home_url }}">#}
-{#    <img src="http://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30"#}
-{#         class="d-inline-block align-top" alt="">#}
-{#    {% if brand_name %} {{ brand_name }} {% else %} Sarmiento Librerias {% endif %}#}
-{#  </a>#}
-{#  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">#}
-{#    <span class="navbar-toggler-icon"></span>#}
-{#  </button>#}
-{##}
-{#  <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
-{#    <ul class="navbar-nav mr-auto">#}
-{#      <li class="nav-item {% if request.path == home_url%}active{% endif %}">#}
-{#        <a class="nav-link" href="{{ home_url }}">Home<span class="sr-only">(current)</span></a>#}
-{#      </li>#}
-{#        {% if request.user.is_authenticated %}#}
-{#        <li class="nav-item {% if request.path == products_url%}active{% endif %}">#}
-{#                <a class="nav-link" href="{{ products_url }}">Productos<span class="sr-only">(current)</span></a>#}
-{#              </li>#}
-{#            <li class="nav-item dropdown">#}
-{#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-{#                  Admin#}
-{#                </a>#}
-{#                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">#}
-{#                  <a class="dropdown-item" href="{{ products_import_url }}">Importar Listas</a>#}
-{#                  <a class="dropdown-item" href="{{ products_url }}">Consulta Precios</a>#}
-{#                </div>#}
-{#            </li>#}
-{##}
-{#            <li class="nav-item {% if request.path == logout_url%}active{% endif %}">#}
-{#            <a class="nav-link" href="{{ logout_url }}">Logout</a>#}
-{#      </li>#}
-{#        {% else %}#}
-{#        <li class="nav-item {% if request.path == login_url%}active{% endif %}">#}
-{#        <a class="nav-link" href="{{ login_url }}">Login</a>#}
-{#        {% endif %}#}
-{#    </ul>#}
-{#    </div>#}
-{#  </div>#}
-{#</nav>#}
