--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -27,37 +27,12 @@
 	</section>
 	<!--Top_content-->
     <!--Service-->
-	<section id="service">
-		<div class="container">
-			<h2>Servicios</h2>
-			<div class="service_area">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="service_block">
-							<div class="service_icon delay-03s animated wow  zoomIn"> <span><i class="fa-flash"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Artística</h3>
-							<p class="animated fadeInDown wow">Los mejores productos, de la mejor calidad y profesionales para los artistas.</p>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="service_block">
-							<div class="service_icon icon2  delay-03s animated wow zoomIn"> <span><i class="fa-comments"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Tecnica</h3>
-							<p class="animated fadeInDown wow">Alta variedad de productos para universitarios y profesionales.</p>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="service_block">
-							<div class="service_icon icon3  delay-03s animated wow zoomIn"> <span><i class="fa-shield"></i></span> </div>
-							<h3 class="animated fadeInUp wow">Escolar</h3>
-							<p class="animated fadeInDown wow">Todo lo que los chicos necesitan para ir al cole.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+    {% include 'services.html' %}
 	<!--Service-->
+    <!-- Portfolio -->
+    {% include 'portfolio_instagram.html' %}
+    <!-- Portfolio -->
+
 </div>
 {#    <footer class="footer_section" id="contact">#}
 {#		<div class="container">#}
