CHG: template finished

--- a/static_my_proj/css/style.css
+++ b/static_my_proj/css/style.css
@@ -901,7 +901,7 @@ img {
 }
 
 .main-section.contact{
-	background:url(../img/poligan_bg.jpg) left 190px no-repeat;
+	background:url(../img/pattern_bg.jpg) left 190px no-repeat;
 }
 
 
