--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -16,9 +16,8 @@
 						<li><a href="{% url 'home' %}">Inicio</a></li>
 						<li><a href="#service">Servicios</a></li>
 						<li><a href="#Portfolio">Portfolio</a></li>
-						<li><a href="#client_outer">Clients</a></li>
-						<li><a href="#team">Team</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#client_outer">Clientes</a></li>
+						<li><a href="#contact">Contacto</a></li>
                         {% if request.user.is_authenticated %}
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
@@ -39,9 +38,8 @@
 						<li><a href="{% url 'home' %}">Inicio</a></li>
 						<li><a href="#service">Servicios</a></li>
 						<li><a href="#Portfolio">Portfolio</a></li>
-						<li><a href="#client_outer">Clients</a></li>
-						<li><a href="#team">Team</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#client_outer">Clientes</a></li>
+						<li><a href="#contact">Contacto</a></li>
                         {% if request.user.is_authenticated %}
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
