FIX: FIXED logo on home page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -13,7 +13,11 @@
 				<div class="top_content">
 					<div class="row">
 						<div class="col-lg-5 col-sm-7">
+                            <div class="logo">
+                                     <a href="javascript:void(0)"><img src="{% static 'img/IMG_1825.PNG' %}" width="32%" height="32%" alt=""></a>
+                                 </div>
 							<div class="top_left_cont flipInY wow animated">
+
 								<h3>Librería &amp; artística!</h3>
 								<h2>Sarmiento Librerias</h2>
 								<p> Tienda de suministros escolares, universitarios, de oficina y artística en Córdoba </p>
