--- a/products/templates/products/products_home.html
+++ b/products/templates/products/products_home.html
@@ -3,18 +3,9 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-{#<script>#}
-{#    $(document).ready( function () {#}
-{#        $('#table_id').DataTable();#}
-{#    });#}
-{#</script>#}
     <script>
     $(document).ready(function() {
         var data = [];
-        {##}
-        {#for ( var i=0 ; i<{{all_objects|length}} ; i++ ) {#}
-        {#    data.push( [ {{all_objects|i}}, i, i, i, i ] );#}
-        {# }#}
         {% for object in all_objects %}
         data.push( [ "{{ object.provider_code }}",
             "{{ object.title }}",
@@ -32,13 +23,27 @@
             {{ object.wholesaler_price }},
         "{{ object.updated }}" ] );
         {% endfor %}
-        $('#table_id').DataTable( {
+        var table = $('#table_id').DataTable( {
             data:           data,
-            {#deferRender:    true,#}
-            {#scrollY:        200,#}
-            {#scrollCollapse: true,#}
-            {#scroller:       true#}
-        } );
+        });
+        table.rows().every( function ( rowIdx, tableLoop, rowLoop ) {
+        var cell = table.cell({ row: rowIdx, column: 3 }).node();
+        $(cell).css('background-color', '#FFAE9D');
+        $(cell).css('font-weight', 'bold');
+        $(cell).css('text-align', 'center');
+        });
+        table.rows().every( function ( rowIdx, tableLoop, rowLoop ) {
+            var cell = table.cell({row: rowIdx, column: 4}).node();
+            $(cell).css('background-color', '#9DF6FF');
+            $(cell).css('font-weight', 'bold');
+            $(cell).css('text-align', 'center');
+        });
+        table.rows().every( function ( rowIdx, tableLoop, rowLoop ) {
+            var cell = table.cell({row: rowIdx, column: 5}).node();
+            $(cell).css('background-color', '#F1FF9C');
+            $(cell).css('font-weight', 'bold');
+            $(cell).css('text-align', 'center');
+        });
     } );
     </script>
     <h1>Products</h1>
@@ -51,22 +56,13 @@
                         <th>Codigo</th>
                         <th>Descripcion</th>
                         <th>Proveedor</th>
-                        <th>Precio Proveedor</th>
-                        <th>Precio Minorista</th>
-                        <th>Precio Mayorista</th>
+                        <th bgcolor="#FFAE9D">Precio Proveedor</th>
+                        <th bgcolor="#9DF6FF">Precio Minorista</th>
+                        <th bgcolor="#F1FF9C">Precio Mayorista</th>
                         <th>Ultima Actualizacion</th>
                     </tr>
                 </thead>
                 <tbody>
-{#                {% for object in all_objects %}#}
-{#                    <tr>#}
-{#                        <td>{{ object.provider_code }}</td>#}
-{#                        <td>{{ object.title }}</td>#}
-{#                        <td>{% if object.provider|slugify == 1|slugify %}ARTEC{% elif object.provider|slugify == 2|slugify %}MONTENEGRO{%elif object.provider|slugify == 3|slugify %}AUDITOR{% else %}FREIBERG{% endif %}</td>#}
-{#                        <td>{{ object.provider_price }}</td>#}
-{#                        <td>{{ object.updated }}</td>#}
-{#                    </tr>#}
-{#                {% endfor %}#}
                 </tbody>
             </table>
         </div>
