FIX: add titulos

--- a/products/templates/products/products_home.html
+++ b/products/templates/products/products_home.html
@@ -54,13 +54,13 @@
             <table id="table_id" class="display">
                 <thead>
                     <tr>
-                        <th>provider_code</th>
-                        <th>title</th>
-                        <th>provider</th>
-                        <th bgcolor="#FFAE9D">provider_price</th>
-                        <th bgcolor="#9DF6FF">retailer_price</th>
-                        <th bgcolor="#F1FF9C">wholesaler_price</th>
-                        <th>updated</th>
+                        <th>Codigo</th>
+                        <th>Descripcion</th>
+                        <th>Proveedor</th>
+                        <th bgcolor="#FFAE9D">Precio Lista</th>
+                        <th bgcolor="#9DF6FF">Precio Minorista</th>
+                        <th bgcolor="#F1FF9C">Precio Mayorista</th>
+                        <th>Ultima Actualizacion</th>
                     </tr>
                 </thead>
                 <tbody>
